# WorldBridge-backend

./: .env.example  .env.example.flat  .gitignore  Dockerfile  README.md  alembic.ini  config.py  database.py  debug_program.py  docker-compose.yml  germanypath.db  main.py  pyproject.toml  requirements.txt  seed.py  seed_all.py  seed_articles.py  seed_countries.py  seed_faq.py  seed_photos.py  seed_programs_1.py  seed_programs_2.py  seed_programs_3.py  seed_programs_4.py  seed_programs_enriched.py  seed_universities.py  start.sh
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  main.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/models/: __init__.py  ai_recommendation.py  application.py  review.py  (+6 more)
models/: __init__.py  ai_chat.py  article.py  checklist.py  country.py  data_sync_log.py  external_scholarship.py  faq.py  favorite.py  program.py  program_image.py  program_suggestion.py  university.py  user.py
routers/: __init__.py  admin_sync.py  ai_consultant.py  articles.py  auth.py  calculator.py  checklists.py  countries.py  favorites.py  program_images.py  programs.py  scholarships.py  suggestions.py  universities.py  users.py
schemas/: __init__.py  article.py  auth.py  calculator.py  country.py  faq.py  program.py  program_image.py  scholarship.py  suggestion.py  university.py
scripts/: seed.py  setup.sh
services/: auth_service.py  calculator_service.py  data_sync.py  scholarship_tracker.py
tests/: conftest.py  test_applications.py  test_auth.py  test_programs.py
utils/: dependencies.py  i18n.py  jwt.py
(+16 files in other folders)
